<resources>
    <string name="app_name">享吃</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_create_res_account">店家註冊</string>
    <string name="action_create_user_account">一般註冊</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_home">首頁</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_foodprint">美食足跡</string>
    <string name="search_restaurant">Restaurant</string>
    <string name="search_hint">搜尋餐廳</string>

    <string name="rest_Username">User Name</string>
    <string name="rest_Password">Password</string>
    <string name="rest_Phone">Phone</string>
    <string name="rest_Email">Email</string>
    <string name="rest_Address">Address</string>
    <string name="rest_Picture">Picture Upload</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="per_page">個人頁面</string>
    <string name="per_name">        吳灌紅              粉絲人數        追蹤人數</string>

</resources>
